--- a/client/src/components/Todos/Todos.css
+++ b/client/src/components/Todos/Todos.css
@@ -1,27 +1,50 @@
 .todosList {
     list-style-type: none;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
 }
 
 .todoList--item {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
+    border-bottom: 1px solid #96CDF1;
+}
+
+.todoList--item-text {
+    width: 80%;
+}
+
+.todoList--item-checkbox {
+    width: 10%;
 }
 
 .todoList--remove-button {
     background: none;
     border: none;
-    font-size: 24px;
-    transform: rotate(45deg);
+    font-size: 18px;
     cursor: pointer;
+    width: 10%;
+    color: red;
+    padding: 5px;
+}
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
 }
 
 .completed {
     text-decoration: line-through;
     opacity: 50%;
 }
-
+/*
 .incomplete {
-    /* color: red */
-}
+    color: red
+} */
