--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,233 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,400&display=swap');
 
 .main-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    margin-top: 100px;
+    padding: 10px;
     align-items: center;
+}
+
+.form-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 400px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.form-title {
+    margin-bottom: 20px;
+    color: #595959;
+    text-align: center;
+}
+
+.text-color-gray {
+    color: #595959;
+    text-align: center;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form__input {
+    height: 2rem;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    font-size: 16px;
+}
+
+.form__input:hover {
+    border-bottom: 1px solid gray;
+}
+
+.form__input:focus {
+    outline: none;
+    border-bottom: 1px solid #96CDF1;
+}
+
+.form__submit-button {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #96CDF1;
+    color: white;
+    font-weight: bold;
+}
+
+.form__submit-button:hover {
+    background-color: #0771E7;
+    cursor: pointer;
+}
+
+.text--small {
+    font-size: 14px;
+}
+
+.text-align-right {
+    padding-right: 20px;
+    text-align: right;
+}
+
+.margin-top-10px {
+    margin-top: 10px;
+}
+
+.margin-top-20px {
+    margin-top: 20px;
+}
+
+.margin-top-40px {
+    margin-top: 50px;
+}
+
+.margin-bottom-10px {
+    margin-bottom: 10px;
+}
+
+.error-text {
+    color: red;
+    font-size: 14px;
+}
+
+.success-text {
+    color: green;
+    font-size: 14px;
+}
+
+.add-form {
+    display: flex;
+}
+
+.add-todo-form {
+    display: flex;
     justify-content: center;
-    font-family: 'Poppins', sans-serif;
+    margin-top: 40px;
+    width: 100%;
+    max-width: 500px;
 }
 
-/* h1, h2, h3, h4 {
-    font-family: 'Roboto', sans-serif;
+.add-todo-input {
+    padding-left: 10%;
+    width: 100%;
+    font-size: 30px;
 }
 
-p, a {
-    font-family: 'Poppins', sans-serif;
-} */
+.add-form--submit-button {
+    width: 30px;
+    background-color: #96CDF1;
+    color: white;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.add-form--submit-button:hover {
+    background-color: #0771E7;
+    cursor: pointer;
+}
+
+.active {
+    background-color: #0771E7;
+}
+
+.members-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+}
+
+.members-list__item {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.remove-button {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    color: red;
+}
+
+.todos-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    width: 100%;
+    max-width: 500px;
+    border-top: 1px solid #96CDF1;
+    list-style-type: none;
+}
+
+.todos-list__item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    width: 100%;
+    padding: 5px 0px;
+    border-bottom: 1px solid #96CDF1;
+    text-align: left;
+}
+
+.todos-list__item-checkbox {
+    width: 5%;
+}
+
+.todos-list__item-text {
+    width: 100%;
+}
+
+p.todos-list__item-text {
+    font-size: 20px;
+}
+
+.width-10 {
+    width: 5%;
+}
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 50%;
+}
+.pl-15px {
+    padding-left: 15px;
+}
+
+.b-none {
+    border: none;
+}
+
+.lists-wrapper {
+    display: flex;
+}
+
+.text-align-center {
+    text-align: center;
+}
